clean up code, fix project section loading error on mobile view

--- a/src/index.css
+++ b/src/index.css
@@ -25,229 +25,11 @@ body {
   overscroll-behavior: none;
 }
 
-.timeline {
-  position: relative;
-  max-width: 1800px;
-  margin: 50px auto;
+img {
+  user-select: none;
+  -webkit-user-drag: none;
 }
 
-.container {
-  padding: 10px 40px;
-  position: relative;
-  width: 50%;
-
-  animation: movedown 1s linear forwards;
-}
-
-@keyframes movedown {
-  0% {
-    opacity: 0;
-    transform: translateY(-30px);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translateY(0);
-  }
-}
-
-/* .container:nth-child(1) {
-  animation-delay: 5s;
-}
-
-.container:nth-child(2) {
-  animation-delay: 6s;
-}
-.container:nth-child(3) {
-  animation-delay: 7s;
-}
-
-.container:nth-child(4) {
-  animation-delay: 8s;
-} */
-
-.text-box {
-  padding: 20px;
-  background-color: #fff;
-  border: 2pt solid #8BB1D1;
-  position: relative;
-  border-radius: 20px;
-  font-size: 14px;
-  z-index: 1;
-  margin-top: 20px;
-}
-
-.text-box h2 {
-  font-weight: 600;
-}
-
-.text-box small {
-  display: inline-block;
-  margin-bottom: 15px;
-  font-size: 15px;
-  font-style: italic;
-  text-underline-offset: 1px;
-}
-
-.left {
-  left: 0;
-}
-
-.right {
-  left: 50%;
-}
-
-.text-box:hover {
-  transform: translateY(-5px);
-  box-shadow: 0 0 15px rgba(93, 136, 170, 0.2);
-}
-
-.container img {
-  position: absolute;
-  width: 40px;
-  height: 40px;
-  object-fit: contain; 
-  background: #fff; 
-  border-radius: 50%;
-  right: -20px;
-  left: auto;
-  top: 60px;
-  z-index: 20;
-}
-
-.right img {
-  left: -20px;
-  right: auto;
-}
-
-
-.timeline-line {
-  position: absolute;
-  width: 6px;
-  height: 0;
-  background: #8BB1D1;
-  top: 0;
-  left: 50%;
-  margin-left: -3px;
-  z-index: 0;
-  transition: height 0.08s linear;
-}
-
-.container.right .arrow-top {
-  position: absolute;
-  top: -15px;           
-  left: 180px;              
-  width: 0;
-  height: 0;
-  border-left: 15px solid transparent;
-  border-right: 15px solid transparent;
-  border-bottom: 15px solid #8BB1D1;  
-  z-index: 10;
-  pointer-events: none;
-}
-
-.container.left .arrow-top {
-  position: absolute;
-  top: -15px;           
-  right: 190px;              
-  width: 0;
-  height: 0;
-  border-left: 15px solid transparent;
-  border-right: 15px solid transparent;
-  border-bottom: 15px solid #8BB1D1;  
-  z-index: 10;
-  pointer-events: none;
-}
-
-@media (min-width: 601px) {
-  .container.left .arrow {
-    position: absolute;
-    top: 35px;
-    right: -15px;
-    width: 0;
-    height: 0;
-    border-top: 15px solid transparent;
-    border-bottom: 15px solid transparent;
-    border-left: 15px solid #8BB1D1;
-    z-index: 10;
-    pointer-events: none;
-  }
-
-  .container.right .arrow {
-    position: absolute;
-    top: 35px;
-    left: -15px;
-    width: 0;
-    height: 0;
-    border-top: 15px solid transparent;
-    border-bottom: 15px solid transparent;
-    border-right: 15px solid #8BB1D1;
-    z-index: 10;
-    pointer-events: none;
-  }
-}
-
-
-@media (max-width: 600px) {
-  .timeline {
-    margin: 60px auto;
-  }
-
-  .container {
-    width: 100%;
-    padding-left: 70px;
-    padding-right: 25px;
-  }
-
-  .right {
-    left: 0;
-  }
-
-  .container img {
-    left: 15px;
-    right: auto;
-  }
-
-  .timeline-line {
-    left: 40px;
-    margin-left: 0;
-  }
-}
-
-
-
-@layer utilities {
-  @keyframes blinke {
-
-    0%,
-    100% {
-      opacity: 1;
-    }
-
-    50% {
-      opacity: 0;
-    }
-  }
-
-  .animate-blink {
-    animation: blink 1s step-end infinite;
-  }
-
-
-  @keyframes loading {
-    0% {
-      transform: translate(0%)
-    }
-
-    100% {
-      transform: translateX(400%);
-    }
-  }
-
-  .animate-loading-bar {
-    animation: loading 0.8s ease infinite;
-  }
-}
 
 .reveal {
   opacity: 0;
